--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -1808,40 +1808,9 @@ ggarrange(ev.pop1, ev.pop2, ev.pop3, ev.pop4, common.legend = TRUE, ncol = 1)
 
 
 
-## Access by quantile
+## Access shifts by quantiles, event studies
 ```{r}
-qnats1 <- seq(0, 0.75, by = 0.25)
-qnats2 <- seq(0.25, 1, by = 0.25)
 
-
-
- 
-   model.dist.quants <-  did2s(
-      data = df.spill3 %>% filter(Dist == 0) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1)), 
-      yname = "NumberofPatients", 
-      treatment = "Tx",
-        first_stage = ~ 1 | Zip + Year , 
-        second_stage = ~ i(Tx, ref = FALSE)  ,
-        cluster_var = "Zip",
-      verbose = FALSE
-    )
-    tes <- data.frame(model.dist.quants$coeftable)[1,]
-    
-    
-  for (i in 1:4){
-      model.dist.quants <-  did2s(
-      data = df.spill3  %>% filter(Dist > quantile(Dist, qnats1[i]) & Dist <= quantile(Dist, qnats2[i]))%>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1))  , 
-      yname = "NumberofPatients", 
-      treatment = "Tx",
-        first_stage = ~ 1 | Zip + Year , 
-        second_stage = ~ i(Tx, ref = FALSE)  ,
-        cluster_var = "Zip",
-      verbose = FALSE
-    ) 
-      tes <- rbind(tes, data.frame(model.dist.quants$coeftable)[1,])
-  }
-    
-    tes
     
     
 zp1 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.9)), 
@@ -1908,6 +1877,56 @@ did2s(
 
 
 
+
+## Acces shifts by quantiles
+```{r}
+qnats1 <- seq(0, 0.833333, by = 0.166666)
+qnats2 <- seq(0.16666, 1, by = 0.1666666)
+
+
+
+ 
+   model.dist.quants <-  did2s(
+      data = df.spill3 %>% filter((Dist == 0 & Att > 0) | Att == 0) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1)) %>% mutate(Tx = ifelse(Att - 1 == Year, 1, Tx)), 
+      yname = "NumberofPatients", 
+      treatment = "Tx",
+        first_stage = ~ 1 | Zip + Year , 
+        second_stage = ~ i(Tx, ref = FALSE)  ,
+        cluster_var = "Zip",
+      verbose = FALSE
+    )
+    tes <- data.frame(model.dist.quants$coeftable)[1,]
+    
+    
+  for (i in 1:6){
+      model.dist.quants <-  did2s(
+      data = df.spill3  %>% filter((Dist > quantile(Dist, qnats1[i]) & Dist <= quantile(Dist, qnats2[i]) & Att > 0 ) | Att == 0)%>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1)) %>% mutate(Tx = ifelse(Att - 1 == Year, 1, Tx)) , 
+      yname = "NumberofPatients", 
+      treatment = "Tx",
+        first_stage = ~ 1 | Zip + Year , 
+        second_stage = ~ i(Tx, ref = FALSE)  ,
+        cluster_var = "Zip",
+      verbose = FALSE
+    ) 
+      tes <- rbind(tes, data.frame(model.dist.quants$coeftable)[1,])
+  }
+    
+    tes
+
+zp.pats <- tes[-1,] %>% 
+  cbind(Quantile = 1:6) %>% 
+  ggplot(aes(x = Quantile, y = Estimate)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=Estimate-1.96*Std..Error, ymax=Estimate+1.96*Std..Error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Effects on Total Patients, by Quantile from Competitive Shock")+ xlab("Quantile of Zip Codes by Distance from Competitive Shock, adjusting for 1 year anticipation") + ylab("Effect Size")
+
+zp.pats
+
+#ggsave(filename = "Picture13pats.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = zp.pats, width = 16, height = 9)
+```
+
+
+
 ## Stratified analysis instead for Access
 ```{r}
 
@@ -1915,7 +1934,8 @@ did2s(
 
 
 model <- did2s(
-      data = df.spill3  %>% filter((Dist >= quantile(Dist, 0.9) & Att > 0) | Att == 0 ) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1))  , 
+      data = df.spill3  %>% filter((Dist >= quantile(Dist, 0.9) & Att > 0) | Att == 0 ) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1)) %>% 
+        mutate(Tx = ifelse(Att - 1 == Year, 1, Tx))  , 
       yname = "Total.Hours", 
       treatment = "Tx",
         first_stage = ~ 1 | Zip + Year , 
@@ -1927,7 +1947,8 @@ model <- did2s(
 TEs.strat.far <- data.frame(model$coeftable)[1,]
 
 for (i in 11:19){
-  df.temp <- df.spill3 %>% filter((Dist >= quantile(Dist, 0.9) & Att > 0) | Att == 0 )
+  df.temp <- df.spill3 %>% filter((Dist >= quantile(Dist, 0.9) & Att > 0) | Att == 0 )%>% 
+        mutate(Tx = ifelse(Att - 1 == Year, 1, Tx))
   df.temp <- df.temp[,c(1:5, i, 16:ncol(df.spill3))] 
   names(df.temp)[1:6] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model <- did2s(
@@ -1946,7 +1967,8 @@ for (i in 11:19){
 
 
 model <- did2s(
-      data = df.spill3  %>% filter((Dist == 0 & Att > 0) | Att == 0 ) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1))  , 
+      data = df.spill3  %>% filter((Dist == 0 & Att > 0) | Att == 0 ) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1)) %>% 
+        mutate(Tx = ifelse(Att - 1 == Year, 1, Tx))  , 
       yname = "Total.Hours", 
       treatment = "Tx",
         first_stage = ~ 1 | Zip + Year , 
@@ -1958,7 +1980,8 @@ model <- did2s(
 TEs.strat.close <- data.frame(model$coeftable)[1,]
 
 for (i in 11:19){
-  df.temp <- df.spill3 %>% filter((Dist == 0 & Att > 0) | Att == 0 )
+  df.temp <- df.spill3 %>% filter((Dist == 0 & Att > 0) | Att == 0 ) %>% 
+        mutate(Tx = ifelse(Att - 1 == Year, 1, Tx))
   df.temp <- df.temp[,c(1:5, i, 16:ncol(df.spill3))] 
   names(df.temp)[1:6] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model <- did2s(
@@ -1989,9 +2012,13 @@ df.spill3 %>% filter(Dist < quantile(Dist, 0.2)) %>%
   filter(Att > 0) %>%
   summarise(mean(Total.Hours))
 
+
 summary(lm(data = df.spill3 %>% filter(Att > 0 & Dist < 200), Total.Hours ~ Dist))
   
 summary(df.spill3[df.spill3$Att > 0,]$Dist)
+
+
+quantile(df.spill3[df.spill3$Att > 0,]$Dist, 0.17)
 
 ### REALLY IMPORTANT BACK OF THE ENVELOP CALCULATION
 
