--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -1673,6 +1673,7 @@ df.spill3 <- df.spill2 %>% #filter(NumberofPatients > 50 ) %>%
   group_by(Zip, `BHCMIS ID`) %>% 
   summarise(counts = n()) %>% 
     filter(counts == 10), by = c("Zip","BHCMIS ID"))  %>%
+  filter(Att == 0 | Att > 2013) %>% 
   
   #group_by(Zip) %>% mutate(MaxNum = max(NumberofPatients)) %>% filter(MaxNum > 50) %>% 
   
@@ -1942,14 +1943,17 @@ qnats2 <- seq(1/6, 1, by = 1/6)
     
     tes
 
-zp.pats <- tes %>% #tes[-1,] %>% 
-  cbind(Quantile = 1:8) %>% 
+zp.pats <- tes[-1,] %>% 
+  cbind(Quantile = 1:6) %>% 
   ggplot(aes(x = Quantile, y = Estimate)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=Estimate-1.96*Std..Error, ymax=Estimate+1.96*Std..Error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Effects on Total Patients, by Quantile from Competitive Shock")+ xlab("Quantile of Zip Codes by Distance from Competitive Shock, adjusting for 1 year anticipation") + ylab("Effect Size")
 
 zp.pats
+
+quantile(df.spill3[df.spill3$Att > 0,]$Dist, 1/3)
+quantile(df.spill3[df.spill3$Att > 0,]$Dist, 2/3)
 
 #ggsave(filename = "Picture13pats.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = zp.pats, width = 16, height = 9)
 ```
